--- a/static/index.html
+++ b/static/index.html
@@ -34,11 +34,11 @@ window.Papercups = {
   config: {
     token: "467d23ef-9635-4305-a219-0fdf7198a1fb",
     inbox: "acb442c6-63ad-41b1-b0f1-953b139fc3ee",
-    title: "Transfer-Centrum-Wissen",
-    subtitle: "Fragen Sie uns alles über das TCW! 😊",
-    primaryColor: "#0693e3",
-    greeting: "Hallo, wie kann ich Ihnen weiterhelfen?",
-    newMessagePlaceholder: "Start typing...",
+    title: "TCW Transfer-Centrum",
+    subtitle: "Fragen Sie unseren Bot alles über das TCW!",
+    primaryColor: "#163b77",
+    greeting: "Hallo, ich bin der TCW Bot. Wie kann ich Ihnen weiterhelfen?",
+    newMessagePlaceholder: "Nachricht eingeben... ",
     showAgentAvailability: false,
     agentAvailableText: "We're online right now!",
     agentUnavailableText: "Unser TCW-Bot ist rund um die Uhr für Sie verfügbar",
