--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
             width: 100%;
         }
     </style>
+    <!--
     <script>
 window.Papercups = {
   config: {
@@ -63,6 +64,25 @@ window.Papercups = {
   defer
   src="https://app.papercups.io/widget.js"
 ></script>
+    -->
+
+    <script>
+      (function(d,t) {
+        var BASE_URL="https://app.chatwoot.com";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.defer = true;
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+          window.chatwootSDK.run({
+            websiteToken: 'QEPnKfGkFcxvZBwFF9kpk51q',
+            baseUrl: BASE_URL
+          })
+        }
+      })(document,"script");
+    </script>
+
 </head>
 
 <body>
